--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body * {
   max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
+  
 }
 
 .profile__data {
@@ -173,4 +174,14 @@ footer {
   padding: 24px;
   text-align: center;
   font-size: 14px;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg2.jpg);
+  }
 }
